--- a/CNN_VQA_MD.ipynb
+++ b/CNN_VQA_MD.ipynb
@@ -1,1 +1,114 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"CNN_VQA_MD.ipynb","version":"0.3.2","provenance":[],"collapsed_sections":[]},"kernelspec":{"name":"python3","display_name":"Python 3"},"accelerator":"GPU"},"cells":[{"metadata":{"id":"l6YsBETXIFhZ","colab_type":"code","colab":{}},"cell_type":"code","source":["import tensorflow as tf\n","import pandas as pd \n","import numpy as np "],"execution_count":0,"outputs":[]},{"metadata":{"id":"z-stlFGDOYoq","colab_type":"code","colab":{}},"cell_type":"code","source":[""],"execution_count":0,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "CNN_VQA_MD.ipynb",
+      "version": "0.3.2",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
+  },
+  "cells": [
+    {
+      "metadata": {
+        "id": "l6YsBETXIFhZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "import pandas as pd \n",
+        "import numpy as np "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "z-stlFGDOYoq",
+        "colab_type": "code",
+        "outputId": "ec5128e9-eb08-4994-9ec0-0adc4fc75701",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_WfXYZeOfcZT",
+        "colab_type": "code",
+        "outputId": "83fbcc25-b07c-492e-af76-9339f06a582c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "cell_type": "code",
+      "source": [
+        "!ls /content/drive/My\\ Drive/CNN_VQA_MD/*.py"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "'/content/drive/My Drive/CNN_VQA_MD/biLstm.py'\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "cKtzMdqYhkju",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "sys.path.append('/content/drive/My Drive/CNN_VQA_MD')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "PisDRD67hX0N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import vgg16\n",
+        "import biLstm"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
+}
